FlightPath 6.x Changelog
========================

2022-01-10
  Modified content.module to make sure a specific bug didn't happen where redirections might not be seen, as well
  as added strip_tags() to values read directly from $_REQUEST.
  
  
  

2022-01-09
  Removed extraneous testing functions.
    
  Added to logged 404 and 403 errors, added the location to the msg so it shows in the watchdog view.
  
  Added function to course_search to get capacity for particular course.

  Updated system to add more indexes to advising tables.
  

2022-01-08
  Fixed bug where "public files" tab was showing on all "add" content screens.
  
  Changed verbage so that SMS text messages change from "TXT" to "Text messages" throughout FlightPath modules.
  
  Implemented new setting in GUI to opt-out of receiving text messages.
  
  Implemented opting-out of text messages if user replies STOP.  Opting back in if they send UNSTOP or SUBSCRIBE.
    
  Removed accidental hard-coded signalwire setting.
  
  Implemented change to sms_history table so we can also track error messages and delivery status.
  
  Only update SMS record (in sms_history table) if price or err_code value changed.
  
  Added extra watchdog (debug) statements for when cron starts and stops.
  

2022-01-07
  Added numerous new watchdog() statements to better track admin actions, like creating and deleting degrees, groups, etc.

  Made the default time to delete watchdog debug statements 1 year instead of 90 days.
  
  Made the default time to delete normal watchdog statements 3 years instead of 1.5 years.

  Always add a "text STOP to opt-out" type message to the end of every sms message.
  
  Altered encounters SMS settings to let user specify which phone numbers are specifically for mass text messages.  The
  mass text messaging form will only select those.


2022-01-04
  Added ability to send arguments to fp_goto() as an array.
  